# salve

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  simple_client.py  simple_server.py  test.py  test2.py  test_ipc.py  test_test.py  tree_sitter_funcs.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report---feature-idea.md
.github/PULL_REQUEST_TEMPLATE/: default-pr.md
.github/workflows/: black.yml  format.yml  isort.yml  pypi.yml  ruff-format.yml  ruff.yml  (+2 more)
docs/: requirements.txt
examples/: example_logging.py  example_usage.py  gui_client.py  logging_tree_sitter_example.py  mapping_logging_example.py  simple_autocomplete_example.py  simple_definitions_example.py  simple_editorconfig_example.py  simple_example.py  simple_highlight_example.py  simple_links_and_hidden_chars_example.py  simple_mapping_example.py  simple_replacements_example.py  simple_tree_sitter_highlights_example.py
salve/: __init__.py  ipc.py  misc.py  server.py  wrappers.py
salve_ipc/: __init__.py  ipc.py  misc.py  server.py  server_functions.py
simple_example/: resreq.py  simple_client.py  simple_server.py
source/: conf.py  example-usage.rst  index.rst  installation.rst  requirements.txt  special-classes.rst
src/: __init__.py  ipc.py  message.py  misc.py  py_impl.py  server.py
test/: __init__.py  file2.py  module.py
tests/: highlight_output.json  test_defintions.py  test_file.py  test_ipc.py  test_overwrite.py  test_regex_stealer.py  test_tree_sitter.py  testing_file1.py  testing_file2.py
(+56 files in other folders)
